--- a/src/formikation.scss
+++ b/src/formikation.scss
@@ -7,9 +7,9 @@
 
 // vars
 
-$border_radius: 3px;
+$border_radius: 3px !default;
 
-$btn_color: red;
+$btn_color: red !default;
 
 // definition
 
@@ -34,12 +34,12 @@ form.formikation {
   }
 
   // Checks y radios
-  input[type=checkbox], input[type=radio] {
+  input[type=checkbox],
+  input[type=radio] {
     padding-top: 1px;
     margin: 0;
     padding: 0;
     cursor: pointer;
-    // We 'hide' the checks / radios moving them outside the screen
     position: absolute;
     left: -9999px;
   }
@@ -58,7 +58,6 @@ form.formikation {
         width: 19px;
         height: 20px;
         margin: -1px 4px 0 0;
-        background: url('../img/formikation-sprite.png') no-repeat 0 0;
       }
     }
     &.fk-radio {
@@ -102,9 +101,7 @@ form.formikation {
     border: 1px solid #ccc;
     background: #fff;
     border-radius: $border_radius;
-
     &:after {
-      content: url('../img/formikation-select-arrow.png');
       display: block;
       float: right;
       padding: 8px 12px;
@@ -116,8 +113,7 @@ form.formikation {
       margin: 0;
       padding: 0 30px 0 0;
       color: #666;
-
-      max-width: 430px; // This set max width before ellipsis
+      max-width: 430px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
