Add formikation js and scss

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,5 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="{{ "/js/jquery.formikation.min.js" | prepend: site.baseurl }}"></script>
 </head>
