--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,7 +12,8 @@
   .logo {
     display: block;
     float: left;
-    padding: 45px 0 35px 112px;
+    padding: 45px 0 35px 145px;
+    background: url('../images/logo.png') no-repeat left center;
     border: 0;
     color: $text;
     font-size: 32px;
