Add examples page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,8 @@
     </a>
 
     <nav class="site-nav">
-      <a href="{{ site.baseurl }}/"{% if page.slug == "home" %} class="active"{% endif %}>Home</a>
+      <a href="{{ site.baseurl }}/"{% if page.slug == "home" %} class="active"{% endif %}>Get Started</a>
+      <a href="{{ site.baseurl }}/examples.html"{% if page.slug == "examples" %} class="active"{% endif %}>Examples</a>
     </nav>
   </div>
 </header>
