--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 $text: #454343;
 $dark_text: #1E1D1D;
 $bg: #F5F5F5;
-$link: #F05220;
+$link: #337AB7;
 $border: #E7E7EC;
 
 $small-desktop: 1200px;
