--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="{{ "/js/jquery.formikation.min.js" | prepend: site.baseurl }}"></script>
+  <script defer src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script defer src="{{ "/js/jquery.formikation.min.js" | prepend: site.baseurl }}"></script>
+  <script defer src="{{ "/js/ready.js" | prepend: site.baseurl }}"></script>
 </head>
