--- a/src/formikation.scss
+++ b/src/formikation.scss
@@ -19,14 +19,14 @@
     display: block;
     position: relative;
     display: inline-block;
-    margin-bottom: 0;
+    margin: 0;
     &:before {
       content: ' ';
       display: inline-block;
       vertical-align: middle;
     }
     &:after {
-      content: ' ';
+      content: '';
       display: block;
       position: absolute;
       background: #fff;
@@ -35,8 +35,7 @@
       &:after,
       &:after {
         // IE8 does not render the changes in a :pseudo-element with we don't change the 'content', thus we change it from ' ' to ''
-        content: '';
-        background: #000;
+        content: ' ';
       }
     }
     &.disabled {
@@ -62,18 +61,14 @@
   .fk-select {
     display: block;
     width: 100%;
-    min-width: 250px;
     &:after {
       display: block;
       float: right;
-      padding: 8px 12px;
-      margin: -8px -15px;
     }
     .fk-select-label {
       display: inline-block;
       margin: 0;
       padding: 0;
-      color: #666;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -95,7 +90,6 @@
     overflow: hidden;
     width: 100%;
     outline: 0;
-    line-height: 1.2;
     &:after {
       content: attr(data-text);
       display: block;
